# circuitpython-experiments

./: .envrc  .gitattributes  .gitignore  Justfile  LICENSE  Makefile  Pipfile  README.md  digital_input.py  flake.nix  pdm_microphone.py  pin_list.py  pyproject.toml
adafruit_feather_esp32s3_4mbflash_2mbpsram/: animation1.py  neox.py  prop_leds.py  rainbows.py  sparkle.py  sparkly_rainbow.py
arduino_nano_rp2040_connect/: digital_input.py  requirements.txt  strip_test.py  wifi.py
circuitplayground_bluefruit/: button.py  code.py  fancy2.py  fancyled_cpb_helper_example.py  fancyled_cpx_rotate.py  fancyled_neopixel_rotate_simpletest.py  fancyled_test.py  gradient-switcher.py  jj-fading-class-1.py  jj-fading-class-2.py  jjmojo-fader-with-mode.py  jjmojo-loopfader-monotonic.py  jjmojo-loopfader-monotonic2.py  jjmojo-loopfader-monotonic3.py  jjmojo1.py  jjred-gradient.py  led_animation.py  libraries.txt  my_boardcheck.py  my_palettes.py  neo1.py  neo2.py  neox.py  requirements.txt  strip_test.py  two_rings.py
gradient-switcher/: Justfile  code.py  my_lib
my_lib/: button.py  colors.py  fader.py
pico-w-wifi/: basic_wifi_test.py  requests_test.py  settings.toml  weather_api_test.py
pico_w_led_01/: animation1.py  animation2.py  demo_pixelmap.py  demo_rainbow.py  demo_sparkle.py  my_pixels.py  pico_w_30_rgb.py  pico_w_60_rgb.py  requirements.txt  sparkly_rainbow.py
pimoroni_tiny2040/: rainbow_cycle.py  requirements.txt
tiny2040_led/: demo_pixelmap.py  demo_play.py  my_pixels.py  tiny2040_24_rgbw_ring.py  tiny2040_30_rgb.py
(+2 files in other folders)
